--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>gh-pagesブランチは、GitHubに公開されます。</h1>
-    <p>この変更はmasteブランチで追加されました。</p>
+    <p>この変更はmasterブランチで追加されました。</p>
 </body>
 </html>
